tests/miz/pass/types/pass_type_elaboration_local_mode_asserted_head_001.miz
definition
  mode LocalModeAssertedHeadDef: LocalModeAssertedHead is set;
end;

reserve x for LocalModeAssertedHead;
theorem LocalModeAssertedHeadPayloadBoundary: x is LocalModeAssertedHead;
