tests/miz/fail/types/fail_type_elaboration_local_attributed_mode_reserve_expansion_gap_001.miz
definition
  let x be set;
  attr MarkedModeDef: x is marked means thesis;
end;

definition
  mode LocalModeDef: LocalMode is set;
end;

reserve m for marked LocalMode;
